Update game title and subtitle in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>狼人杀 - 局域网游戏</title>
+  <title>狼人杀游戏</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
     <div id="lobby" class="screen active">
       <div class="container">
         <h1>🐺 狼人杀</h1>
-        <p class="subtitle">局域网多人游戏</p>
+        <p class="subtitle">多人游戏</p>
         
         <div class="lobby-card">
           <div class="quick-actions">
