Update game files

--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,22 @@
               <strong>猎人</strong>：死亡时可开枪带走一人
             </div>
             <div class="role-info">
+              <span class="role-icon">🛡️</span>
+              <strong>守卫</strong>：每晚可守护一人，不能连续守同一人
+            </div>
+            <div class="role-info">
+              <span class="role-icon">🤪</span>
+              <strong>白痴</strong>：被投票放逐时可翻牌免死，失去投票权
+            </div>
+            <div class="role-info">
+              <span class="role-icon">⚔️</span>
+              <strong>骑士</strong>：白天可决斗一人，整局一次
+            </div>
+            <div class="role-info">
+              <span class="role-icon">🐺‍❄️</span>
+              <strong>白狼王</strong>：白天自爆可带走一人
+            </div>
+            <div class="role-info">
               <span class="role-icon">👤</span>
               <strong>村民</strong>：通过投票找出狼人
             </div>
